--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-    @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
 
     body {
         background-color: rgb(0, 0, 0);
         font-family: Helvetica;
     }
 
-    div.colors {
+    div.wrapper {
         padding: 1px;
         background-color: rgb(0, 0, 0);
         display: flex;
